--- a/config/config.yml
+++ b/config/config.yml
@@ -13,6 +13,11 @@ raw_data:
   CLIENTS_DATA: "client_data.json"
   PRODUCTS_DATA: "full_product_extraction_sample.json"
 
+format:
+  json: "json"
+  parquet: "parquet"
+  delta: "delta" 
+
 table_names:
   ADDRESS_TABLE: "address_table"
   CLIENTS_TABLE: "clients_table"
