--- a/.aws/config
+++ b/.aws/config
@@ -1,6 +1,6 @@
 [default]
 REGION = eu-south-2
-STREAM_NAME = orders_stream
+STREAM_NAME = orders_stream_4
 
 [paths]
 BUCKET_NAME = s3a://vproptimiserplatform
