feat: add readme

--- a/.aws/config
+++ b/.aws/config
@@ -1,6 +1,6 @@
 [default]
 REGION = eu-south-2
-STREAM_NAME = orders_stream_5
+STREAM_NAME = VPR_orders_stream
 
 [paths]
 BUCKET_NAME = s3a://vproptimiserplatform
